--- a/templates/500.html
+++ b/templates/500.html
@@ -1,6 +1,6 @@
 <br/>
 <center>
 <h1>500 Internal server error</h1>
-<p>Page not found - Try again...<p>	
+<p>Oops, Page not found - Try again...<p>	
 
 </center>
